--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="profile-container">
     <div class="profile_img">
-        <img src="profile.jpg" alt="Sharlene Profile">
+        <img src="./profile.jpg" alt="Sharlene Profile">
     </div>
 
     <div class="personal-info">
